@@ -222,7 +222,13 @@ abstract class CBaseListView extends CWidget
 		{
 			if(($summaryText=$this->summaryText)===null)
 				$summaryText=Yii::t('zii','Total {count} result(s).');
-			echo strtr($summaryText,array('{count}'=>$count));
+			echo strtr($summaryText,array(
+				'{count}'=>$count,
+				'{start}'=>1,
+				'{end}'=>$count,
+				'{page}'=>1,
+				'{pages}'=>1,
+			));
 		}
 		echo '</div>';
 	}
